# third_repository

./: .gitignore  .gitignore.swp  CMakeLists-ipc.txt  CMakeLists.txt  README.md
cloudserver/: CMakeLists.txt
cloudserver/mqtt_client/src/: mqtt.c  mqtt.h  mqtt_client.cpp  mqtt_client.h  mqtt_message.cpp  mqtt_message.h  packet.h
cloudserver/src/: cloud_server.cpp  cloud_server.h
hihopesdk/: CMakeLists.txt
hihopesdk/base/core/: core_public.h
hihopesdk/base/core/src/ai/: aiinterface.cpp  aiinterface.h  aiinterfaceext.cpp  aiservice.h  aiserviceext.cpp  aiserviceext.h  mtcnnout.h
hihopesdk/base/core/src/camera/: camera.cpp  camerainterface.cpp  camerainterface.h  cvcamera.cpp
hihopesdk/base/core/src/operator/: cpuoperator.cpp  operatorfactory.cpp  operatorinterface.h
hihopesdk/base/core/src/queue/: frameitem.cpp  frameitem.h  framequeue.cpp  framequeueconsumer.cpp  framequeueproducer.cpp  frameslot.cpp  frameslot.h  noblockpipe.h
hihopesdk/base/core/src/thread/: handler.cpp  message.cpp  task.cpp  threadloop.cpp
hihopesdk/base/opencl/: opencl_public.h
hihopesdk/base/opencl/src/: face_net_opencl.cpp  opencloperator.cpp  opencloperator.h  tool.cpp
hihopesdk/base/qtutils/src/: appconfig.cpp  appconfig.h  singleton.h
hihopesdk/business/facerecognition/: facerecognition_public.h
hihopesdk/business/facerecognition/src/: faceaccesscontrol.cpp  faceattendance.cpp  facedetect.cpp  facedetect.h  facedetectservice.cpp  facedetectservice.h  facerecognition.cpp  facerecognitionapi.cpp  facerecognitionapi.h  hisi_draw.cpp  test.cpp
hihopesdk/business/peoplecount/src/: peoplecountbackend.cpp  peoplecountbackend.h  peoplecountdataop.cpp  peoplecountdataop.h  peoplecountdetect.cpp  peoplecountdetect.h
hihopesdk/datamanager/db_facerecognition/: db_facerecognition.h
hihopesdk/datamanager/db_facerecognition/src/: dbcache.cpp  dbcache.h  module.h  pola_sdk_export.h  serverrequestmanager.cpp
hihopesdk/datamanager/db_peoplecount/src/: peoplecount.cpp  peoplecount.h  peoplecountcsvstore.cpp  peoplecountcsvstore.h  peoplecountdbstore.cpp  peoplecountdbstore.h  peoplecountstore.cpp  peoplecountstore.h
hihopesdk/hardware/dummy/src/: dummy.cpp
hihopesdk/hardware/hi3516/src/adapter/: dpucamera.cpp  mipicamera.cpp  mipicamera.h
hihopesdk/hardware/hi3516/src/common/: sample_comm_venc.c
hihopesdk/hardware/hi3516/src/dpu/: sample_comm_dpu.c
hihopesdk/hardware/hi3516/src/mpp/: MppPipe.cpp  mppframe.cpp  mppframe.h  mppiniter.cpp  sample_comm_vo.c
hihopesdk/hardware/hi3516/src/nnie/: sample_nnie.c  sample_svp_nnie_software.c
hihopesdk/hardware/hi3516/src/yolov3/: yolv3nniealik.cpp
hihopesdk/hardware/hi3559a/src/adapter/: mipicamera.cpp  mipicamera.h
hihopesdk/hardware/hi3559a/src/core/: audio_mp3_adp.c  sample_comm_audio.c  sample_comm_nnie.c  sample_comm_nnie.h  sample_comm_svp.c  sample_comm_vdec.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c  sample_nnie.c  sample_nnie_main.h  sample_svp_nnie_software.c  sample_svp_nnie_software.h
hihopesdk/hardware/hi3559a/src/core_ext/: nniehelper.cpp  nniehelper.h  sample_nnie_ext.c  sample_nnie_ext.h
hihopesdk/hardware/hi3559a/src/dpu/: sample_comm_dpu.h  sample_dpu_main.h  sample_dpu_process.c
hihopesdk/hardware/hi3559a/src/facenet/: face_lib.cpp  face_lib.hpp  face_net.cpp  face_net.hpp  facenetnnieimpl.cpp  facenetnnieimpl.h  mtcnn.cpp  mtcnn.hpp  test_mtcnn.cpp
hihopesdk/include/: .core_public.h.swp  aiinterface.h  facedetect.h  facenetout.h  facerecognitionapi.h  mipicamera.h  mpi_nnie.c  mppcomponent.h  noblockpipe.h  objectdetectout.h  pola_sdk_export.h  sample_comm.h  serverrequestmanager.h  singleton.h  task.h
hihopesdk/libs/lib/: libopencv_calib3d.so.3.4.1  libopencv_core.so.3.4.1  libopencv_features2d.so.3.4  libopencv_imgcodecs.so.3.4.1  libopencv_imgproc.so.3.4  libopencv_shape.so.3.4.1  libopencv_stitching.so.3.4  libopencv_video.so.3.4.1  libopencv_videoio.so.3.4
hihopesdk/libs/opencv/lib_arm/: libopencv_flann.so.3.4  libopencv_highgui.so.3.4  libopencv_ml.so.3.4  libopencv_objdetect.so.3.4  libopencv_photo.so.3.4  libopencv_superres.so.3.4  libopencv_videostab.so.3.4.1
hihopesdk/res/clkernels/: facenet.cl
hihopesdk/sdk1v0/include/: MppPipe.h  aiinterfaceext.h  aiservice.h  aiserviceext.h  autoconf.h  camera.h  camerainterface.h  core_private.h  cpuoperator.h  cvcamera.h  dbcache1.h  dpucamera.h  dummy.h  faceattendance.h  facedetect.h  facedetectservice.h  facerecognition.h  facerecognitionapi.h  frame.h  frameitem.h  framequeue.h  framequeueconsumer.h  framequeueproducer.h  frameslot.h  handler.h  hi_comm_vo.h  mat_types.h  mtcnnout.h  noblockpipe.h  objectdetectout.h  operatorfactory.h  operatorinterface.h  pola_sdk_export.h  reflectobject.h  sample_svp_nnie_software.h  threadloop.h  timer.h  utils.h
hihopesdk/sdk2v0/include/: aiserviceext.h  bufferqueue.h  camera.h  core_public.h  db_facerecognition.h  dbcache.h  errors.h  faceaccesscontrol.h  facedetect.h  facedetectservice.h  facenetout.h  facerecognition_public.h  macros.h  mipicamera.h  module.h  mppframe.h  mtcnnout.h  objectdetectout.h  pipe.h  pola_sdk_export.h  pool.h  sample_comm.h  sample_svp_nnie_software.h
http_cmd/: CMakeLists.txt
http_cmd/inc/: HttpServerlib.h  http-server-lib.h  httpserver.h
http_cmd/src/: HttpServerlib.cpp  http-server-lib.c
minIni/: CMakeLists.txt
rtspserver/: CMakeLists.txt  forcfile.cpp
rtspserver/src/base/: AsyncLogging.cpp  Condition.cpp  Logging.cpp  Mutex.cpp  Sem.cpp  ThreadPool.cpp
rtspserver/src/extend/alsa/: AlsaMediaSource.cpp
rtspserver/src/extend/v4l2/: V4l2MediaSource.cpp
rtspserver/src/net/: AACFileMediaSource.cpp  AACRtpSink.cpp  AACRtpSink.h  Acceptor.cpp  Event.cpp  EventScheduler.cpp  H264FileMediaSource.cpp  H264RtpSink.cpp  H264RtpSink.h  MediaSession.cpp  MediaSession.h  MediaSource.cpp  MediaSource.h  Rtp.h  RtpInstance.h  RtpSink.cpp  RtpSink.h  RtspConnection.cpp  RtspConnection.h  RtspServer.cpp  SocketsOps.cpp  TcpConnection.cpp  TcpServer.cpp  Timer.cpp  UsageEnvironment.cpp
rtspserver/src/net/poller/: EPollPoller.cpp  PollPoller.cpp  SelectPoller.cpp
(+146 files in other folders)
